Update Primer Trabajo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <!--<img src="assets/img/logo.png" class="img-fluid">-->
-                Gino Salguero
+                Gino Salguero - Portafolio
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -121,16 +121,18 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/img01.png)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">1re Trabajo - CV</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Explicabo iure sint, perspiciatis distinctio molestias nihil
                             repudiandae neque rem adipisci repellendus libero illo quo
                             blanditiis, velit quasi ad, recusandae voluptates officia.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
-                        </button>
+                        <a href="https://gsalgueroi.github.io/desafio_gs_01/">
+                            <button type="button" class="btn btn-outline-info">
+                                Ver más
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
