--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="esp">
 
 <head>
     <meta charset="UTF-8">
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Gino Salguero</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
@@ -22,7 +21,8 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <!--<img src="assets/img/logo.png" class="img-fluid">-->
-                Gino Salguero - Portafolio
+                <span style="font-size: 1.2rem;">Gino Salguero Ipinza</span><br>
+                <span style="font-size: 1rem;font-style: italic;">Ingeniero Industrial / Inform&aacute;tico</span> 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,13 +31,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mi</a>
+                        <a class="nav-link" href="#Experiencia">Experiencia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trabajos</a>
+                        <a class="nav-link" href="#Trabajos-Colaborativos">Trabajos Colaborativos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#Contacto">Contacto</a>
                     </li>
 
                 </ul>
@@ -46,16 +46,15 @@
         </div>
     </nav>
 
-    <header id="Hero-Section" class="text-light text-end py-5 mt-5">
+    <header id="About-Section" class="text-light text-end py-5 mt-5">
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
-                <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> de la Galaxia
-                </h1>
+                <h2 class="display-7 fw-bold my-5">
+                    Acerca de mi
+                </h2>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
+                    earum itaque cum sequi, dolorem optio vol
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
@@ -66,10 +65,10 @@
     </header>
 
 
-    <section id="Acerca-de-mi" class="container text-center my-5">
+    <section id="Experiencia" class="container text-center my-5">
 
 
-        <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+        <h2 class="display-6 fw-bold my-4">Experiencia</h2>
 
         <p class="my-4">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
@@ -79,56 +78,105 @@
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafo de Alimentos Nutritivos</h3>
+                <i class="fas fa-address-book fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Ejemplo CV</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
                     ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.
                 </p>
+                <a href="https://gsalgueroi.github.io/desafio_gs_01" target="_blank">
+                    <button type="button" class="btn btn-outline-info">
+                        Ver más
+                    </button>
+                </a>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítico Sibarita interplatanario</h3>
+                <i class="fas fa-microchip fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Ejemplo Landing</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
                     ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.
                 </p>
+                <a href="https://gsalgueroi.github.io/desafio_gs_02" target="_blank">
+                    <button type="button" class="btn btn-outline-info">
+                        Ver más
+                    </button>
+                </a>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Diletante profesional Tierra 63721</h3>
+                <i class="far fa-eye fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Iguana</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
                     ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.
                 </p>
+                <a href="https://gsalgueroi.github.io/desafio_gs_03" target="_blank">
+                    <button type="button" class="btn btn-outline-info">
+                        Ver más
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <i class="fas fa-university fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Cuppon</h3>
+                <p class="my-3">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </p>
+                <a href="https://gsalgueroi.github.io/desafio_gs_04" target="_blank">
+                    <button type="button" class="btn btn-outline-info">
+                        Ver más
+                    </button>
+                </a>
+            </div>
+            <div class="col-12 col-md-6">
+                <i class="fas fa-wifi fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Git Ini</h3>
+                <p class="my-3">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.
+                </p>
+                <a href="https://gsalgueroi.github.io/desafio_gs_05" target="_blank">
+                    <button type="button" class="btn btn-outline-info">
+                        Ver más
+                    </button>
+                </a>
             </div>
         </div>
     </section>
 
 
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+    <section id="Trabajos-Colaborativos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-6 fw-bold text-center text-light mb-3">Trabajos Colaborativos</h2>
 
         <div class="row">
-            <div class="col-12 col-sm-4 py-2">
+            <div class="col-12 col-sm-6 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/img01.png)"></div>
+                    <div class="image-top">
+                        <i class="fas fa-address-card fa-1x my-3"></i>&nbsp;<span>Felipe</span> 
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">1re Trabajo - CV</h5>
+                        <h5 class="card-title fw-bold">Trabajo Colaborativo Nro.1</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Explicabo iure sint, perspiciatis distinctio molestias nihil
                             repudiandae neque rem adipisci repellendus libero illo quo
                             blanditiis, velit quasi ad, recusandae voluptates officia.
                         </p>
-                        <a href="https://gsalgueroi.github.io/desafio_gs_01/">
+                        <a href="https://github.com/gsalgueroi/kakatorox.github.io_fork" target="_blank">
                             <button type="button" class="btn btn-outline-info">
                                 Ver más
                             </button>
@@ -136,40 +184,28 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-4 py-2">
+            <div class="col-12 col-sm-6 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/img02.png)"></div>
+                    <div class="image-top">
+                        <i class="fas fa-address-card fa-1x my-3"></i>&nbsp;<span>Ibania</span> 
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Trabajo Colaborativo Nro.2</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
                             consequatur quos error fuga excepturi quo. Laudantium optio
                             pariatur laboriosam modi, ea molestias?
                         </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
-                        </button>
+                        <a href="https://github.com/gsalgueroi/iperezsidgmann.github.io_fork" target="_blank">
+                            <button type="button" class="btn btn-outline-info">
+                                Ver más
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-4 py-2">
-                <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/img03.png)"></div>
-                    <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
-                        <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
-                        </p>
-                        <button type="button" class="btn btn-outline-info">
-                            Ver más
-                        </button>
-                    </div>
-                </div>
-            </div>
+            
         </div>
 
     </section>
@@ -178,7 +214,7 @@
 
     <section id="Contacto" class="container my-5">
 
-        <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
+        <h2 class="display-6 fw-bold text-center my-4">Contáctame</h2>
 
         <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Doloribus
