--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
+                        <a class="nav-link" href="#About-Section">About</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#Experiencia">Experiencia</a>
                     </li>
                     <li class="nav-item">
