Ultima modificacion de menus activos

--- a/index.html
+++ b/index.html
@@ -59,9 +59,16 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
                     earum itaque cum sequi, dolorem optio vol
                 </p>
-                <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
-                    <button class="btn btn-lg btn-info text-light">Contacto</button>
+                <div class="mb-5 pb-2">
+                    <!--
+                    <a class="nav-link" href="#Trabajos-Colaborativos">
+                        <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
+                    </a>
+                    -->
+
+                    <a class="nav-link" href="#Trabajos-Colaborativos">
+                        <button class="btn btn-lg btn-info text-light">Trabajos</button>
+                    </a>
                 </div>
             </div>
         </div>
