se modifica texto en card

--- a/index.html
+++ b/index.html
@@ -198,15 +198,12 @@
             <div class="col-12 col-sm-6 py-2">
                 <div class="card">
                     <div class="image-top">
-                        <i class="fas fa-address-card fa-1x my-3"></i>&nbsp;<span>Ibania</span> 
+                        <i class="fas fa-address-card fa-1x my-3"></i>&nbsp;<span>Ivania</span> 
                     </div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Trabajo Colaborativo Nro.2</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            Espero que quien lea esto tenga un buen día (:
                         </p>
                         <a href="https://github.com/gsalgueroi/iperezsidgmann.github.io_fork" target="_blank">
                             <button type="button" class="btn btn-outline-info">
